# SDL2_Tetris_Client

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  chaed_formatter.codestyle.json
Tetris/: CMakeLists.txt
Tetris/include/: ClientService.h  TClientController.h  TDefine.h  TDisplayInterface.h  THeader.h  TPlayerBox.h  TProperty.h  TResource.h  TStruct.h  TType.h
Tetris/src/: Main.cpp
Tetris/src/Common/: TDefine.h  THeader.h  TProperty.h  TResource.h  TStruct.h  TType.h
Tetris/src/TClient/: ClientService.cpp  TClientController.cpp  TClientController.h
Tetris/src/TDisplay/: TDisplayInterface.h  TOptionDisplay.cpp  TOptionDisplay.h
Tetris/src/TFiguers/: TFigure.cpp  TFigure.h  TFigureBoard.h  TFigureBoardBuilder.h  TFigureBuilder.cpp  TFigureBuilder.h  TFigureController.cpp  TFigureController.h  TFigureI.cpp  TFigureI.h  TFigureL.cpp  TFigureL.h  TFigureO.cpp  TFigureO.h  TFigureT.cpp  TFigureT.h  TFigureUnit.cpp  TFigureUnit.h  TFigureZ.cpp  TFigureZ.h
Tetris/src/TObject/: TGameRoom.cpp  TGameRoom.h  TPlayer.cpp  TPlayer.h  TScore.cpp  TScore.h  TWaitingRoom.cpp  TWaitingRoom.h
Tetris/src/TOption/: TOptionManager.cpp  TOptionManager.h
example/SDL2_draw_3d/: CMakeLists.txt  main.cpp
example/SDL2_draw_example/: CMakeLists.txt  main.cpp  readme.md
example/UIClassExample/: .gitignore  CMakeLists.txt  DisplayInterface.h  MainDisplay.h  MainLocalDisplay.h  TDisplayController.cpp  TDisplayController.h  TType.h  UIClassExample.sln  main.cpp
example/UIClassExample/UIClassExample/: DisplayInterface.h  MainDisplay.h  MainLocalDisplay.h  MainOnlineDisplay.h  UIClassExample.vcxproj  UIClassExample.vcxproj.filters  main.cpp
example/ace/ACE_Tetris_Server/: CMakeLists.txt
example/boost_asio_example/: CMakeLists.txt
example/boost_asio_example/boost_asio_example/: CMakeLists.txt  boost_asio_example.cpp  boost_asio_example.h
example/jsoncpp/: CMakeLists.txt  main.cpp
example/jsoncpp/cmake/: json_cmake.cmake
example/teris_figure_class/: CMakeLists.txt  Main.cpp  TBoardController.cpp  TBoardController.h  TController.cpp  TController.h  TDefine.h  TFigure.cpp  TFigure.h  TFigureBoard.cpp  TFigureBoard.h  TFigureBoardBuilder.cpp  TFigureBoardBuilder.h  TFigureBuilder.cpp  TFigureBuilder.h  TFigureI.cpp  TFigureI.h  TFigureL.cpp  TFigureL.h  TFigureLBuilder.cpp  TFigureLBuilder.h  TFigureO.cpp  TFigureO.h  TFigureT.cpp  TFigureT.h  TFigureUnit.cpp  TFigureUnit.h  TFigureZ.cpp  TFigureZ.h  TMain.cpp  TProperty.h  TType.h  TypeTraits.h  main.cpp  teris_figure_class.vcxproj  teris_figure_class.vcxproj.filters
example/teris_figure_class/Common/: TDefine.h  THeader.h  TProperty.h  TType.h
example/teris_figure_class/Debug/: vc141.idb
example/teris_figure_class/DevLib/: RandomGenerator.cpp  RandomGenerator.h
example/teris_figure_class/TDisplay/: DisplayInterface.h  MainDisplay.h  MainLocalDisplay.h  MainOnlineDisplay.h  TDisplayController.cpp  TDisplayController.h  TDisplayInterface.cpp  TDisplayInterface.h  TDisplayMain.cpp  TDisplayMain.h
example/teris_figure_class/TGame/: TBoardController.cpp  TDisplayController.cpp  TDisplayGame.cpp  TDisplayGame.h  TFigure.h  TFigureBoard.cpp  TFigureBoard.h  TFigureBoardBuilder.cpp  TFigureBuilder.h  TFigureI.cpp  TFigureI.h  TFigureL.cpp  TFigureL.h  TFigureO.cpp  TFigureO.h  TFigureT.h  TFigureUnit.cpp  TFigureUnit.h  TFigureZ.cpp  TFigureZ.h  TGameController.cpp  TGameController.h  TGameMain.h
example/teris_figure_class/TMain/: TMainDisplay.cpp  TMainDisplay.h  TMainLocalDisplay.cpp  TMainLocalDisplay.h  TMainOnlineDisplay.cpp  TMainOnlineDisplay.h
example/teris_figure_class/TOption/: TOptionDisplay.cpp  TOptionDisplay.h
example/tetris_figure_class/: CMakeLists.txt  Main.cpp  test.txt
example/tetris_figure_class/CMakeModules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
example/tetris_figure_class/Common/: TDefine.h  THeader.h  TProperty.h  TStruct.h  TType.h  TypeTraits.h
example/tetris_figure_class/TClient/: TClientConnector.h  TClientService.cpp  TClientService.h
example/tetris_figure_class/TControll/: TButton.cpp  TButton.h  TButtonBasic.cpp  TButtonBasic.h  TControll.cpp  TControll.h  TControllBuilder.cpp  TControllBuilder.h  TEditLabel.cpp  TEditLabel.h  TGroupControll.cpp  TGroupControll.h  TGroupControllManager.cpp  TGroupControllManager.h  TRadioButton.cpp  TRadioButton.h  TStaticLabel.cpp  TStaticLabel.h
example/tetris_figure_class/TDisplay/: TDisplayController.cpp  TDisplayController.h  TDisplayInterface.cpp  TDisplayInterface.h  TGameDisplay.cpp  TGameDisplay.h  TGameLocalDisplay.cpp  TGameLocalDisplay.h  TMenuBuilder.cpp  TMenuBuilder.h  TOptionDisplay.cpp  TOptionDisplay.h  TWindow.cpp  TWindow.h
example/tetris_figure_class/TGame/: TBoardController.cpp  TBoardController.h  TFigure.cpp  TFigure.h  TFigureBoard.cpp  TFigureBoard.h  TFigureBoardBuilder.h  TFigureBuilder.cpp  TFigureBuilder.h  TFigureI.cpp  TFigureI.h  TFigureL.cpp  TFigureL.h  TFigureO.cpp  TFigureO.h  TFigureT.cpp  TFigureT.h  TFigureUnit.cpp  TFigureUnit.h  TFigureZ.cpp  TFigureZ.h  TGameDisplay.cpp  TGameDisplay.h  TGameLocalDisplay.cpp  TGameLocalDisplay.h  TScore.cpp  TScore.h
example/tetris_figure_class/TGraphic/: TBorder.cpp  TBorder.h  TGraphicInterface.h
example/tetris_figure_class/TMain/: TMainDisplay.cpp  TMainDisplay.h  TMainLocalDisplay.cpp  TMainLocalDisplay.h  TMainOnlineDisplay.cpp  TMainOnlineDisplay.h
example/tetris_figure_class/TObject/: TAtomic.h  TObject.cpp  TObject.h  TPlayer.cpp  TPlayer.h  TRoom.cpp  TRoom.h
example/tetris_figure_class/TOption/: TOptionDisplay.cpp  TOptionDisplay.h  TOptionManager.cpp  TOptionManager.h
example/tetris_figure_class/src/: CMakeLists.txt
lib/EasyTimer/: CMakeLists.txt  Countdown.h  Date.h  EasyTimer.cpp  ElapsedTimer.h  Scheduling.h  ScopeTimer.h  Stopwatch.h  TimerBasic.h  Times.h
lib/GameInterface/: CMakeLists.txt  CMakeSettings.json
lib/GameInterface/include/: Atomic.h  Configcpp.h  Constant.h  Countdown.h  Date.h  ElapsedTimer.h  Event.h  GameRoom.h  Logger.h  (+27 more)
lib/SDL2EasyGUI/: CMakeLists.txt
lib/Tetris/: CMakeLists.txt
(+545 files in other folders)
